@@ -1,3 +1,12 @@
+2022-03-09  Matteo Flores  <matteo_flores@apple.com>
+
+        [iOS] Hard link AVPictureInPictureController
+        https://bugs.webkit.org/show_bug.cgi?id=237227
+
+        Unreviewed test gardening.
+
+        * platform/ipad/TestExpectations:
+
 2022-03-09  Jon Lee  <jonlee@apple.com>
 
         Unreviewed gardening.
